CREATE TABLE IF NOT EXISTS User (
  id INT AUTO_INCREMENT PRIMARY KEY,
  username VARCHAR(255) NOT NULL UNIQUE,
  reputation INT NOT NULL DEFAULT 0
);

CREATE TABLE IF NOT EXISTS Vulnerability (
  id INT AUTO_INCREMENT PRIMARY KEY,
  type VARCHAR(100) NOT NULL,
  description TEXT NOT NULL,
  points INT NOT NULL
);

CREATE TABLE IF NOT EXISTS Report (
  id INT AUTO_INCREMENT PRIMARY KEY,
  user_id INT NOT NULL,
  vulnerability_id INT NOT NULL,
  status TINYINT NOT NULL DEFAULT 0,
  FOREIGN KEY (user_id) REFERENCES User(id) ON DELETE CASCADE,
  FOREIGN KEY (vulnerability_id) REFERENCES Vulnerability(id) ON DELETE CASCADE
);

-- Gamification tables
CREATE TABLE IF NOT EXISTS Badge (
  id INT AUTO_INCREMENT PRIMARY KEY,
  name VARCHAR(100) NOT NULL,
  description TEXT,
  min_points INT NOT NULL
);

CREATE TABLE IF NOT EXISTS UserBadge (
  user_id INT NOT NULL,
  badge_id INT NOT NULL,
  acquired_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
  PRIMARY KEY (user_id, badge_id),
  FOREIGN KEY (user_id) REFERENCES User(id) ON DELETE CASCADE,
  FOREIGN KEY (badge_id) REFERENCES Badge(id) ON DELETE CASCADE
);
